<resources>
    <string name="app_name">nada</string>
    <string name="Hello">Hello world!</string>
    <string name="etUno">Put Something Here!</string>
    <string name="Button">This is a cool button!</string>
    <string name="Name">Enter your name here!</string>
    <string name="greeting">Hola, %1$s!</string>
    <string name="btngreetings">Greetings!</string>
    <string name="Calculator">Go to the calculator!</string>
    <string name="Number">Put a number down here!</string>
    <string name="etNumber">Put the number here!</string>
    <string name="calculate">Calculate!</string>
    <string name="result">El resultado:</string>
    <string name="btnaddition">Addition</string>
    <string name="btnsubstraction">Substraction</string>
    <string name="btnmultiplication">Multiplication</string>
    <string name="btndivision">Division</string>
    <string name="Imc_App">Imc App</string>
    <string name="Male">Hombre</string>
    <string name="Female">Mujer</string>
    <string name="Height">Altura</string>
    <string name="Weight">Peso</string>
    <string name="Age">Edad</string>
    <string name="Calculate">Calcular</string>
    <string name="weight_text">%1$d kg</string>
    <string name="height_text">%1$d cm</string>
    <string name="imc_result">%1$f</string>
    <string name="errorMessage">Error</string>
    <string name="reCalculate">Re-Calcular</string>
    <string name="underweight">Peso bajo</string>
    <string name="normal_weight">Peso normal</string>
    <string name="overweight">Sobrepeso</string>
    <string name="obesity">Obesidad</string>
    <string name="imc_description_underweight">Estás por debajo de lo saludable para tu peso y altura </string>
    <string name="imc_description_normal_weight">Estás dentro de lo saludable para tu peso y altura </string>
    <string name="imc_description_overweight">Estás por encima de lo saludable para tu peso y altura </string>
    <string name="imc_description_obesity">Estás MUY por encima de lo saludable para tu peso y altura (Consulte a su doctor) </string>
</resources>